[gd_scene load_steps=22 format=3 uid="uid://wnllrngtfcsq"]

[ext_resource type="Script" uid="uid://clcpynj6l5ja8" path="res://scenes/game/enemies/enemy.gd" id="1_m3nk5"]
[ext_resource type="Texture2D" uid="uid://c2piu777bj6oy" path="res://assets/models/textures/prototype_materials/orange.png" id="2_luidu"]
[ext_resource type="PackedScene" uid="uid://cmpsosu66jhbk" path="res://scenes/game/entities/resources/health.tscn" id="2_m83fb"]
[ext_resource type="Script" uid="uid://rxqya8uibhc0" path="res://scenes/game/enemies/enemy_sm.gd" id="3_nb7yw"]
[ext_resource type="Script" uid="uid://ch1bcualbdm5" path="res://scenes/game/enemies/states/enemy_roaming_state.gd" id="4_lps3g"]
[ext_resource type="Script" uid="uid://b2ku7hcapo45r" path="res://scenes/game/enemies/states/enemy_following_state.gd" id="5_luidu"]
[ext_resource type="Script" uid="uid://d0580ite7w2e0" path="res://scenes/game/enemies/states/enemy_attacking_state.gd" id="6_muu5b"]
[ext_resource type="AudioStream" uid="uid://c4ecwh6oni7ay" path="res://assets/audio/sfx/enemy/Zombie_idle3.ogg" id="8_muu5b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_egi3l"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m3nk5"]
albedo_texture = ExtResource("2_luidu")
metallic = 1.0
uv1_triplanar = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_m3nk5"]
material = SubResource("StandardMaterial3D_m3nk5")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_muu5b"]
albedo_color = Color(0.176419, 0.176419, 0.176419, 1)
roughness = 0.15

[sub_resource type="BoxMesh" id="BoxMesh_rhrmy"]
material = SubResource("StandardMaterial3D_muu5b")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_luidu"]
radius = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_muu5b"]
radius = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rhrmy"]
albedo_color = Color(0.158472, 0.158472, 0.158472, 1)
roughness = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_u1vld"]
material = SubResource("StandardMaterial3D_rhrmy")
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_muu5b"]
size = Vector3(0.4, 0.4, 0.4)

[sub_resource type="Animation" id="Animation_8sppt"]
resource_name = "enemy_attack"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spranga:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.81, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.783844, 0, 0), Vector3(0.783844, 0, 0), Vector3(0.783844, 0, -0.722644), Vector3(0.783844, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spranga:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.81, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(-0.785398, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spranga/AttackArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.01, 1.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_0yp3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spranga:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.783844, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spranga:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spranga/AttackArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcibx"]
_data = {
&"RESET": SubResource("Animation_0yp3x"),
&"enemy_attack": SubResource("Animation_8sppt")
}

[node name="Enemy" type="CharacterBody3D" node_paths=PackedStringArray("occhiali", "NAVIGATION_AGENT", "AUDIO_PLAYER", "AREA_SMALL", "AREA_BIG", "WEAPON", "WEAPON_ANIMATION")]
script = ExtResource("1_m3nk5")
occhiali = NodePath("MeshInstance3D/MeshInstance3D")
NAVIGATION_AGENT = NodePath("NavigationAgent3D")
AUDIO_PLAYER = NodePath("AudioStreamPlayer3D")
AREA_SMALL = NodePath("Areas/TriggerAreaSmall")
AREA_BIG = NodePath("Areas/TriggerAreaBig")
WEAPON = NodePath("Weapon")
WEAPON_ANIMATION = NodePath("Weapon/AnimationPlayer")

[sub_resource type="BoxMesh" id="BoxMesh_rhrmy"]
material = SubResource("StandardMaterial3D_muu5b")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_luidu"]
radius = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_muu5b"]
radius = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rhrmy"]
albedo_color = Color(0.158472, 0.158472, 0.158472, 1)
roughness = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_u1vld"]
material = SubResource("StandardMaterial3D_rhrmy")
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_muu5b"]
size = Vector3(0.191553, 1.03799, 0.209131)

[sub_resource type="Animation" id="Animation_0yp3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spranga:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.783844, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spranga:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_damage")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:can_be_parried")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Spranga/CSGSphere3D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8sppt"]
resource_name = "enemy_attack"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spranga:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.81, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.783844, 0, 0), Vector3(0.783844, 0, 0), Vector3(0.783844, 0, -0.722644), Vector3(0.783844, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spranga:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.81, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(-0.785398, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_damage")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.03333, 2.36667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:can_be_parried")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.03027, 1.21295),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Spranga/CSGSphere3D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.0298, 1.21302),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcibx"]
_data = {
&"RESET": SubResource("Animation_0yp3x"),
&"enemy_attack": SubResource("Animation_8sppt")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u1vld"]
lifetime_randomness = 0.18
particle_flag_align_y = true
direction = Vector3(0, 1, 0)
initial_velocity_min = 2.0
initial_velocity_max = 5.0
collision_mode = 1
collision_friction = 0.15
collision_bounce = 0.67

[sub_resource type="TextMesh" id="TextMesh_u1vld"]
text = "PARRY"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u1vld"]
albedo_color = Color(0.900072, 0, 0.178315, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8sppt"]
material = SubResource("StandardMaterial3D_u1vld")
size = Vector3(0.1, 0.1, 0.1)

[node name="Enemy" type="CharacterBody3D" node_paths=PackedStringArray("NAVIGATION_AGENT", "AUDIO_PLAYER", "AREA_SMALL", "AREA_BIG", "MESH", "WEAPON", "WEAPON_ANIMATION", "BLOOD_PARTICLES", "PARRY_PARTICLES", "FREEZE_TIMER") groups=["enemy"]]
script = ExtResource("1_m3nk5")
NAVIGATION_AGENT = NodePath("NavigationAgent3D")
AUDIO_PLAYER = NodePath("AudioStreamPlayer3D")
AREA_SMALL = NodePath("Areas/TriggerAreaSmall")
AREA_BIG = NodePath("Areas/TriggerAreaBig")
MESH = NodePath("Capsula")
WEAPON = NodePath("Weapon")
WEAPON_ANIMATION = NodePath("Weapon/AnimationPlayer")
BLOOD_PARTICLES = NodePath("Particles/BloodParticles")
PARRY_PARTICLES = NodePath("Particles/ParryParticles")
FREEZE_TIMER = NodePath("FreezeTimer")

[node name="CollisionForCharacterController" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_egi3l")

[node name="Capsula" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_m3nk5")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.742723, 0, 0, 0, 0.295719, 0, 0, 0, 0.647025, 0.0132549, 0.535579, -0.204111)
mesh = SubResource("BoxMesh_rhrmy")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_egi3l")

[node name="FreezeTimer" type="Timer" parent="."]
process_mode = 3
one_shot = true

[node name="Health" parent="." instance=ExtResource("2_m83fb")]

[node name="Areas" type="Node3D" parent="."]

[node name="TriggerAreaSmall" type="Area3D" parent="Areas"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/TriggerAreaSmall"]
shape = SubResource("CylinderShape3D_luidu")
debug_color = Color(0.566641, 0.557419, 1.92523e-07, 0.42)

[node name="TriggerAreaBig" type="Area3D" parent="Areas"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/TriggerAreaBig"]
shape = SubResource("CylinderShape3D_muu5b")
debug_color = Color(0.904402, 0.286595, 0.283274, 0.42)

[node name="StateMachine" type="Node" parent="."]
process_priority = 1
process_physics_priority = 1
script = ExtResource("3_nb7yw")

[node name="Roaming" type="Node" parent="StateMachine"]
process_priority = 1
process_physics_priority = 1
script = ExtResource("4_lps3g")

[node name="Following" type="Node" parent="StateMachine"]
process_priority = 1
process_physics_priority = 1
script = ExtResource("5_luidu")

[node name="Attacking" type="Node" parent="StateMachine"]
process_priority = 1
process_physics_priority = 1
script = ExtResource("6_muu5b")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_muu5b")
bus = &"Sfx"

[node name="Weapon" type="Node3D" parent="."]

[node name="Spranga" type="MeshInstance3D" parent="Weapon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.783844, 0, 0)
mesh = SubResource("CylinderMesh_u1vld")

[node name="AttackArea" type="Area3D" parent="Weapon/Spranga"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.377823, 0)
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Weapon/Spranga/AttackArea"]
shape = SubResource("BoxShape3D_muu5b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
libraries = {
&"": SubResource("AnimationLibrary_lcibx")
}

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="animation_finished" from="Weapon/AnimationPlayer" to="StateMachine/Attacking" method="_on_animation_player_animation_finished"]
